few changes,div id

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <button id="stop" disabled>Stop KeyLogging</button>
         </div>
         <div class="button-container">
-            <div id="log"></div>
-            <div id="state"></div>
-            <h2 style = "color : blueviolet; ">Made by 0xKaizoku</h2>
+            <div id="keylogDiv"></div>
+            <div id="stateDiv"></div>
+            <h2 style = "color :red; ">Made by 0xKaizoku</h2>
         </div>
     </div>
     <script src="script.js">
